--- a/browser/requirements.txt
+++ b/browser/requirements.txt
@@ -16,7 +16,7 @@ Jinja2>=3.1.2
 setuptools>=58.1.0
 future>=0.18.2
 streamlit>=1.15.0
-opencv-python>=4.7.0.72
+opencv-python-headless>=4.7.0.72
 matplotlib>=3.5.2
 numpy>=1.22.4
 Shapely>=1.8.2
